# Tide-Server-Launcher

./: .envrc  Cargo.toml  README.md  architecture.md  config.toml  servers.json
.config/: config.json5
src/: action.rs  app.rs  components.rs  logging.rs  main.rs  tui.rs  ui.rs
src/components/: fps.rs  home.rs  server_list.rs  settings.rs
