[package]
name = "ul-server-launcher"
version = "0.1.0"
edition = "2021"
description = "TUI Server Launcher for UmiLab"
authors = ["UmiLabServer"]
license = "MIT"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
color-eyre = "0.6.5"
